css解析 支持复杂选择器

--- a/week06/server/static/index.html
+++ b/week06/server/static/index.html
@@ -7,7 +7,7 @@
       background-color: #ff5000;
     }
 
-    body div img {
+    body div>img#myid {
       width: 30px;
       background-color: #ff1111;
     }
