--- a/week06/index.html
+++ b/week06/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link href='http://cdn.repository.webfont.com/webfonts/nomal/132993/48129/5ec428c9f629d80d3cebdfac.css' rel='stylesheet' type='text/css' />
+  <link href='https://cdn.repository.webfont.com/webfonts/nomal/132993/48129/5ec428c9f629d80d3cebdfac.css' rel='stylesheet' type='text/css' />
   <style>
     * {
       margin: 0;
