--- a/week15/Animation/index.html
+++ b/week15/Animation/index.html
@@ -10,12 +10,18 @@
       width: 100px;
       height: 100px;
       background-color: cyan;
+      text-align: center;
+      line-height: 100px;
+      color: #fff;
     }
 
     #block2 {
       width: 100px;
       height: 100px;
       background-color: cyan;
+      text-align: center;
+      line-height: 100px;
+      color: #fff;
     }
 
     #block3 {
@@ -23,6 +29,9 @@
       height: 100px;
       background-color: cyan;
       transition: transform ease-in 5s;
+      text-align: center;
+      line-height: 100px;
+      color: #fff;
     }
   </style>
 </head>
